--- a/.classpath
+++ b/.classpath
@@ -7,21 +7,21 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/libs/selenium-server-standalone-3.141.59.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/poi-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/poi-examples-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/poi-excelant-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/poi-integration-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/poi-ooxml-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/poi-ooxml-full-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/poi-ooxml-lite-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/poi-scratchpad-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/ooxml-lib/xmlbeans-4.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/ooxml-lib/curvesapi-1.06.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/lib/commons-codec-1.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/lib/commons-collections4-4.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/lib/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/lib/SparseBitSet-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/Java Libraries/poi-bin-5.0.0-20210120/poi-5.0.0/ooxml-lib/commons-compress-1.20.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/commons-codec-1.15.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/commons-compress-1.20.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/curvesapi-1.06.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/poi-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/poi-examples-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/poi-excelant-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/poi-integration-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/poi-ooxml-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/poi-ooxml-full-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/poi-ooxml-lite-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/poi-scratchpad-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/SparseBitSet-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Academia/libs/xmlbeans-4.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
