--- a/.classpath
+++ b/.classpath
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/commons-codec-1.15.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/commons-collections4-4.4.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/commons-compress-1.20.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/curvesapi-1.06.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/poi-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/poi-examples-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/poi-excelant-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/poi-integration-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/poi-ooxml-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/poi-ooxml-full-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/poi-ooxml-lite-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/poi-scratchpad-5.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/selenium-server-standalone-3.141.59.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/SparseBitSet-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Academia/libs/xmlbeans-4.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/libs/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/commons-codec-1.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/commons-compress-1.20.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/curvesapi-1.06.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/poi-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/poi-examples-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/poi-excelant-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/poi-integration-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/poi-ooxml-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/poi-ooxml-full-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/poi-ooxml-lite-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/poi-scratchpad-5.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/SparseBitSet-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/francisco.mendoza/Documents/eclipse/academia_2/FrameWorkXForce/libs/xmlbeans-4.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
